SUBDIRS =  f2c_libs f2c_blas f2c_lapack f2c_math cvode

# header file accumulation                                                                                                 
all:
	@echo copying headers $<
	cp -p f2c_libs/sysdep1.h0 f2c_libs/sysdep1.h
	cp -p f2c_libs/signal1.h0 f2c_libs/signal1.h
